# tools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  ReleaseNotes.md
.github/scripts/: prep_valgrind_test.sh
.github/workflows/: ContinuousIntegration.yml
cmake/: dependencies.cmake  develop_dependencies.cmake  release_dependencies.cmake  tools-config.cmake.in  unit_testing.cmake  unit_testing_python.cmake
python/: CMakeLists.txt
python/src/: tools.python.cpp  tools.views.hpp
python/stubs/tools/: sequence.pyi  tools.pyi
src/: tools.hpp
src/tools/: Log.hpp  concepts.hpp  disco.hpp  overload.hpp  ranges.hpp  std20.hpp  std23.hpp  views.hpp
src/tools/Log/test/: CMakeLists.txt
src/tools/concepts/: IsIterator.hpp  IsRange.hpp  Requires.hpp
src/tools/concepts/IsIterator/test/: CMakeLists.txt  IsIterator.test.cpp
src/tools/concepts/IsRange/test/: CMakeLists.txt  IsRange.test.cpp
src/tools/concepts/Requires/test/: CMakeLists.txt  Requires.test.cpp
src/tools/disco/: BaseField.hpp  BaseFixedWidthField.hpp  BaseFixedWidthReal.hpp  Character.hpp  Column.hpp  ENDF.hpp  FixedPoint.hpp  FixedWidthReal.hpp  FixedWidthScientific.hpp  FreeFormatCharacter.hpp  FreeFormatInteger.hpp  FreeFormatReal.hpp  Integer.hpp  Real.hpp  Record.hpp  Scientific.hpp  functions.hpp
src/tools/disco/BaseField/test/: BaseField.test.cpp  CMakeLists.txt
src/tools/disco/BaseFixedWidthField/test/: BaseFixedWidthField.test.cpp  CMakeLists.txt
src/tools/disco/Character/test/: CMakeLists.txt  Character.test.cpp
src/tools/disco/Column/test/: CMakeLists.txt  Column.test.cpp
src/tools/disco/ENDF/test/: CMakeLists.txt  ENDF.test.cpp
src/tools/disco/FixedPoint/test/: CMakeLists.txt  FixedPoint.test.cpp
src/tools/disco/FixedWidthReal/test/: CMakeLists.txt  FixedWidthReal.test.cpp
src/tools/disco/FixedWidthScientific/test/: FixedWidthScientific.test.cpp
src/tools/disco/FreeFormatCharacter/test/: CMakeLists.txt  FreeFormatCharacter.test.cpp
src/tools/disco/FreeFormatInteger/test/: CMakeLists.txt  FreeFormatInteger.test.cpp
src/tools/disco/FreeFormatReal/test/: CMakeLists.txt  FreeFormatReal.test.cpp
src/tools/disco/Integer/test/: CMakeLists.txt  Integer.test.cpp
src/tools/disco/Real/test/: CMakeLists.txt  Real.test.cpp
src/tools/disco/Record/test/: CMakeLists.txt  Record.test.cpp
src/tools/disco/Scientific/test/: CMakeLists.txt  Scientific.test.cpp
src/tools/disco/functions/test/: CMakeLists.txt  functions.test.cpp
src/tools/ranges/: AnyIterator.hpp  AnyView.hpp  IteratorView.hpp  TransformIterator.hpp  TransformView.hpp  ViewBase.hpp  concepts.hpp  make_transform_view.hpp  make_view.hpp
src/tools/ranges/AnyIterator/: AnyIteratorConcept.hpp  AnyIteratorModel.hpp
src/tools/ranges/AnyIterator/test/: AnyIterator.test.cpp
src/tools/ranges/AnyView/test/: AnyView.test.cpp  CMakeLists.txt  usecase.test.cpp
src/tools/ranges/IteratorView/test/: CMakeLists.txt  IteratorView.test.cpp
src/tools/ranges/TransformIterator/test/: CMakeLists.txt  TransformIterator.test.cpp
src/tools/ranges/TransformView/: Iterator.hpp
src/tools/ranges/TransformView/test/: CMakeLists.txt  TransformView.test.cpp
src/tools/ranges/make_transform_view/test/: CMakeLists.txt  make_transform_view.test.cpp
src/tools/ranges/make_view/test/: CMakeLists.txt  make_view.test.cpp
src/tools/std20/: algorithm.hpp  concepts.hpp  functional.hpp  iterator.hpp  ranges.hpp  type_traits.hpp  views.hpp
src/tools/std20/algorithm/: adjacent_find.hpp  count.hpp  equal.hpp  find.hpp  min.hpp  mismatch.hpp
src/tools/std20/algorithm/test/: CMakeLists.txt  count.test.cpp  (+4 more)
src/tools/std20/detail/: common_reference.hpp  common_type.hpp  macros.hpp  swap.hpp  type_traits.hpp
src/tools/std20/iterator/: common_iterator.hpp  concepts.hpp  counted_iterator.hpp  default_sentinel.hpp  operations.hpp  reverse_iterator.hpp  unreachable.hpp
src/tools/std20/views/: all.hpp  common.hpp  counted.hpp  drop.hpp  drop_while.hpp  elements.hpp  empty.hpp  filter.hpp  interface.hpp  iota.hpp  join.hpp  ref.hpp  reverse.hpp  single.hpp  split.hpp  subrange.hpp  take.hpp  take_while.hpp  transform.hpp
src/tools/std23/: views.hpp
src/tools/std23/test/: CMakeLists.txt  usecase.test.cpp
src/tools/std23/views/: chunk.hpp  chunk_by.hpp  repeat.hpp  stride.hpp  zip.hpp  zip_transform.hpp
src/tools/test/: CMakeLists.txt  overload.test.cpp
src/tools/view/: IteratorView.hpp
src/tools/views/: AnyIterator.hpp  AnyView.hpp  views-python.hpp
src/tools/views/AnyIterator/: AnyIteratorConcept.hpp  AnyIteratorModel.hpp
test/Log/: Log.test.cpp
test/disco/: Column.test.cpp  FreeFormatInteger.test.cpp  Record.test.cpp
test/std20/algorithm/: adjacent_find.test.cpp  count_if.test.cpp  equal.test.cpp  find.test.cpp
test/std20/concepts/: common_with.test.cpp  constructible_from.test.cpp  copyable.test.cpp  destructible.test.cpp  floating_point.test.cpp  integral.test.cpp  move_constructible.test.cpp  relation.test.cpp  totally_ordered.test.cpp
test/std20/functional/: greater.test.cpp  invoke.test.cpp  less_equal.test.cpp
test/std20/iterator/: common_iterator.test.cpp
test/std20/iterator/concepts/: bidirectional_iterator.test.cpp  contiguous_iterator.test.cpp  incrementable.test.cpp  input_iterator.test.cpp  output_iterator.test.cpp  sentinel_for.test.cpp
test/std20/iterator/operations/: prev.test.cpp
test/std20/ranges/access/: begin.test.cpp  cend.test.cpp  crbegin.test.cpp  crend.test.cpp  data.test.cpp  distance.test.cpp  end.test.cpp  rbegin.test.cpp  rend.test.cpp
test/std20/ranges/concepts/: common_range.test.cpp  contiguous_range.test.cpp  input_range.test.cpp  output_range.test.cpp  random_access_range.test.cpp  sized_range.test.cpp  viewable_range.test.cpp
test/std20/views/: all.test.cpp  counted.test.cpp  drop.test.cpp  empty.test.cpp  filter.test.cpp  iota.test.cpp  join.test.cpp  ref.test.cpp  reverse.test.cpp  split.test.cpp  subrange.test.cpp  take.test.cpp  transform.test.cpp
test/std23/: usecase.test.cpp
test/std23/views/: stride.test.cpp
test/views/: AnyIterator.test.cpp  AnyView.test.cpp
(+165 files in other folders)
